# cpr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ccb/: ccb.config  ccb_memory.md
cpr/: __main__.py
cpr/cli/: api.py  cache.py  main.py  redact.py  render.py
cpr/core/: __init__.py  builtin_tree.py  candidates.py  executor.py  model.py  session.py  slash.py
cpr/i18n/: __init__.py  en-US.yaml  loader.py  zh-CN.yaml
cpr/tui/: __init__.py  app.py  candidates.py  keys.py
data/: sdkman.yaml
docs/01-需求分析/: 2026-06-19-形态-B-需求.md  产品功能详细描述.md  命名讨论.md
docs/02-系统设计/: 2026-06-19-AI起手式-架构与协议.md  2026-06-19-契约补丁-v1.md  2026-06-19-契约评审-archi.md  2026-06-19-契约逻辑与验收标准.md  2026-06-19-接口契约.md  2026-06-20-T-003-LLM选型评审.md
docs/03-项目规划/: 事故阻塞升级记录.md  任务分解.md  任务规划.md  分支与发布规约.md  变更与缺陷队列.md  滚动执行列表.md  环境密钥与依赖变更规约.md  角色分工.md
docs/04-会议记录/: 2026-06-19-启动决策.md
docs/04-实施部署/: 2026-06-19-T-002b-client-实施.md
docs/05-验收反馈/: 2026-06-19-T-001-验收报告.md  2026-06-19-T-002b-修复复测.md  2026-06-19-T-002b-冒烟.md  2026-06-19-T-002b-契约一致性.md  2026-06-19-循环验证方案.md  2026-06-20-T-002b-archi-复评.md  2026-06-20-T-002b-archi-终评.md
docs/06-待优化/: T-001-后续打磨.md  T-002a-后续打磨.md
docs/08-开发日志/: 2026-06-19-T-001-复盘.md
scripts/: manual_sdk_smoke.sh  mock_server.py
tests/cli/: conftest.py  test_cache.py  test_fixtures.py  test_main_api.py  test_more_main.py  test_redact.py  test_render.py
tests/core/: test_candidates.py  test_executor.py  test_model_session.py  test_slash_i18n.py
tests/data/: test_sdkman_yaml.py
tests/tui/: test_composite_resolver.py  test_slash_dispatch.py
(+45 files in other folders)
