[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpr"
version = "0.1.0"
description = "Command Prompt Runner prototype"
requires-python = ">=3.11"
dependencies = [
  "prompt_toolkit>=3.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cpr/core"]

[tool.setuptools.packages.find]
include = ["cpr*"]
